basic implementation of functionality and ui finalized

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chapa-role-dash</title>
-    <meta property="og:type" content="website" />
+    <meta name="description" content="Transaction Dashboard" />
+
+    <meta property="og:title" content="chapa-role-dash" />
   </head>
 
   <body>
