favicon replaced by chapa logo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chapa-role-dash</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="description" content="Transaction Dashboard" />
 
     <meta property="og:title" content="chapa-role-dash" />
